# gitProba

./: BASH эмодзи в коде.md  CRC.py  CRC16_with_input.py  Cursor.txt  Hex2BinAndCheckSum.py  Hex2BinAndSelectCheckSum.py  Hex2BinCScalcul  PriborTL7.HEX  Python SSH агент.md  Python proxy.md  Python proxyCrypto.md  Python serverCrypto.md  Python34.md  RUST.md  eho_server.py  git.txt  udp_proxy.py  vicom.py  ПреобразHex_Bin_wSelCS  Программа вычисления контрольной суммы HEX файла.md  Процесс работы с вашим репозиторием на GitHub.md  Эмодзи-смайлики.txt
Diagram4Python/: diagram.py  primer.py  queue_usage_diagram
VirtualCom/: README.md  main.py  vicom.py
VirtualComR/: Cargo.toml  README.md  debug_paths_only.txt  dll2rust.txt  dll_list.txt  dll_list_all.txt  dll_list_filtered.txt  extract_2dlls.ps1  extract_dlls.ps1  get_dependencies.ps1  get_dependencies_direct.ps1  get_dependencies_simple.ps1  prepare-files.ps1
VirtualComR/src/: main.rs
VirtualEth/: README.md  clientVir.py  serverVir.py
blinky2/: DataFile.h  FreeRTOSConfig.h  Makefile  MakefileWOinterrupt  Makefile_1byte  crc16.c  crc16.h  main.c  main.elf  mainWOinterrupt.c  main_1byte.c  uart.c  uart.h
for_Obsidian/: FreeRTOS Task (задачи).md  FreeRTOS очереди (xQueueReceive).md  FreeRTOS семафоры (xSemaphoreTake).md  FreeRTOS.md  Graphviz (Graph Visualization Software).md  PROMT.md  Promt -- algoritm Program.md  Promt -- оппонент.md  Python README.md  Python ошибки.md  README.md  README_IPport.md  READMEcrypto.md  RUST.md  STM  Алгоритм Проекта (STM32 + FreeRTOS).md  STM NVIC.md  STM install.md  com0com.md  (+18 more)
(+37 files in other folders)
